--- a/.forceignore
+++ b/.forceignore
@@ -10,3 +10,12 @@ package.xml
 
 # LWC Jest
 **/__tests__/**
+
+# Added by Illuminated Cloud
+/.illuminatedCloud/
+**/*.ts
+**/tsconfig*.json
+**/*.tsbuildinfo
+**/eslint.config.mjs
+
+**/graphql.config.yml
